biosensor (0.6.1) lucid; urgency=low

  * TBD: In-memory solver state.
  * Workaround for initial conditions on corners is implemented.
    This fixes the problem, that arised at 0'th iteration in the profiles.
  * TBD: Permissible oscillation.
  * TBD: Attribute 'forStepCount' in fallback element.
  * TBD: Precision for concentration profile output writer.

 -- Karolis Petrauskas <k.petrauskas@gmail.com>  Fri, 03 Sep 2010 12:06:04 +0300

biosensor (0.6.0) lucid; urgency=low

  * Implementation of adaptive time step adjuster.
  * Implementation of concentration oscillation stop condition.
  * Removed raising of exception, if setting invalid concentration on
    constant bound.
  * Implemented currentdensity subcommand in the bio-output. It removes
    trash, produced by the fallbacks when doing adaptive time step
    adjustments.

 -- Karolis Petrauskas <k.petrauskas@gmail.com>  Thu, 02 Sep 2010 23:25:46 +0300

biosensor (0.5.1) lucid; urgency=low

  * Updated changelog

 -- Karolis Petrauskas <k.petrauskas@gmail.com>  Mon, 16 Aug 2010 00:05:54 +0300

biosensor (0.5.0) lucid; urgency=low

  * Implemented one-dimensional implicit solver.

 -- Karolis Petrauskas <k.petrauskas@gmail.com>  Mon, 16 Aug 2010 00:04:33 +0300

biosensor (0.4.3) lucid; urgency=low

  * Solver performance optimizations.

 -- Karolis Petrauskas <k.petrauskas@gmail.com>  Fri, 06 Aug 2010 05:14:50 +0300

biosensor (0.4.2) karmic; urgency=low

  * Small fixes in the build part. It was needed because of porting this
    application to Debian.

 -- Karolis Petrauskas <k.petrauskas@gmail.com>  Mon, 04 Jan 2010 23:22:09 +0200

biosensor (0.4.1) unstable; urgency=low

  * Fixes for reactions on a bound. Previous impmenentation had nothing in common with the mathematical part.
  * Fixed bugs regarding diffusion directions on the bounds.
  * Improved logging.

 -- Karolis Petrauskas <k.petrauskas@gmail.com>  Fri, 18 Dec 2009 18:41:03 +0200

biosensor (0.4.0) unstable; urgency=low
