@@ -110,10 +110,10 @@ void BIO_SLV_FD_IM2D_NS::ConstantCondition::setConcentration(int x, double c)
 {
     if (std::abs(concentration - c) > ZERO_MAX)
     {
-        LOG_WARN(LOGGER
-                 << "Trying to set invalid concentration for a bound with constant condition:"
-                 << " new=" << c << " const=" << concentration
-                );
+        LOG_ERROR(LOGGER
+                  << "Trying to set invalid concentration for a bound with constant condition:"
+                  << " new=" << c << " const=" << concentration
+                 );
         throw BIO_NS::Exception("Trying to set concentration for a bound with constant condition...");
     }
     edge->setC0(x, concentration);
